# lattice

./: .flake8  .gitignore  README.md  paths.py  pyproject.toml  requirements.txt
src/lattice/: __init__.py  logger.py
src/lattice/cli/: main.py
src/lattice/compiler/: README.md  digest.py  types.py
src/lattice/config/: config.ini
src/lattice/indexer/: init_db.sql  local.py  models.py  repository.py
src/lattice/llm/: README.md  together.py
src/lattice/llm/template/: template.py
src/lattice/retrieve/: __init__.py  example_data_1.py  example_scenario_1.py  indexer.py  prompt.ini  prompts.py  retriever.py  utils.py
test/: test_digest.py  test_digest_neo4j.py
test/props/: digest_main.py
test/props/example_directory/: example_script.py
test/props/example_directory/example_child/: __init__.py  example_deep_script.py
