[tool.poetry]
name = "lattice"
version = "0.1.0"
description = "Soverant Lattice is a powerful tool designed to bridge the gap between human language and code."
authors = ["Soverant"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
